Fix gallery thumbnails to prevent image cropping by using object-fit: contain

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -3789,7 +3789,14 @@ textarea.required-field {
 .gallery-item-image {
   width: 100%;
   height: 150px;
-  object-fit: cover;
+  display: block;
+  position: relative;
+}
+
+.gallery-item-image img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
   display: block;
 }
 
